# algebra

./: .gitignore  .stylish-haskell.yaml  Description.txt  algebra.cabal  woot.cabal
src/: Additive.hs  Applicable.hs  Collins.hs  Complex.hs  Composite.hs  Euclidean.hs  Exponentiable.hs  Exponentiative.hs  Expr.hs  Expression.hs  Factorial.hs  Field.hs  Hack.hs  Invertable.hs  Lambda.hs  Lambda2.hs  Lambda3.hs  Main.hs  Modular.hs  Multiplicative.hs  Negatable.hs  Numeral.hs  Numeral2.hs  Polynomial.hs  Powerable.hs  PowerableExpresion.hs  Ratio.hs  Rational.hs  Reciprocative.hs  Ring.hs  Subtractive.hs  TestPolynomial.hs  TestUtil.hs  Trigonometric.hs
src/Data/: Complex.hs  Expression.hs  Modular.hs  Polynomial.hs  Rational.hs
src/Data/Expression/: Derivative.hs  Eval.hs  Inverse.hs
src/Data/Numeral/: Numeral1.hs  Numeral2.hs  Numeral4.hs
src/Domains/: Additive.hs  Applicable.hs  Composite.hs  Euclidean.hs  Exponentiative.hs  Field.hs  Multiplicative.hs  Negatable.hs  Reciprocative.hs  Ring.hs  Subtractive.hs  Trigonometric.hs
src/Expression/: Derivative.hs  Eval.hs  Inverse.hs
src/Lambda/: Lambda1.hs  Lambda2.hs  Lambda3.hs
src/Numeral/: Numeral1.hs  Numeral2.hs  Numeral3.hs  Numeral4.hs
test/: Main.hs  TestComplex.hs  TestExpression.hs  TestFactorial.hs  TestLambda.hs  TestLambda2.hs  TestLambda3.hs  TestModular.hs  TestPolynomial.hs  TestRational.hs  TestTypes.hs
test/Data/: TestComplex.hs  TestExpression.hs  TestModular.hs  TestPolynomial.hs  TestRational.hs
test/Data/Expression/: TestDerivative.hs  TestEval.hs  TestInverse.hs
test/Data/Numeral/: TestNumeral1.hs
test/Expression/: TestDerivative.hs  TestEval.hs  TestInverse.hs
test/Lambda/: TestLambda1.hs  TestLambda2.hs  TestLambda3.hs
test/Numeral/: TestNumeral1.hs
