name:                algebra
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/algebra#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable algebra
  other-modules:       Additive, Negatable, Subtractive, Multiplicative, Invertable, Ring, Field, Euclidean, Exponentiative, Trigonometric, Applicable,
                       Rational, Complex, Modular, Expression, Polynomial, Numeral.Numeral1,
                       Hack,
                       Expression.Eval,
                       Expression.Derivative,
                       Composite,
                       Factorial,
                       Collins,
                       TestUtil,
                       TestFactorial, TestTypes
                       TestRational, TestComplex, TestModular, TestExpression, TestPolynomial, Numeral.TestNumeral1,
                       Expression.TestEval,
                       Expression.TestDerivative,
                       Lambda, TestLambda,
                       Lambda2, TestLambda2,
                       Lambda3, TestLambda3
  hs-source-dirs:      src, test
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
