name:                algebra
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/algebra#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable algebra
  other-modules:       Domains.Additive,
                       Domains.Negatable,
                       Domains.Subtractive,
                       Domains.Multiplicative,
                       Domains.Reciprocative,
                       Domains.Ring,
                       Domains.Field,
                       Domains.Euclidean,
                       Domains.Exponentiative,
                       Domains.Trigonometric,
                       Domains.Applicable,
                       Domains.Composite,
                       Rational, Complex, Modular, Expression, Polynomial, Numeral.Numeral1,
                       Hack,
                       Expression.Eval,
                       Expression.Derivative,
                       Expression.Inverse,
                       Factorial,
                       Collins,
                       TestUtil,
                       TestFactorial, TestTypes
                       TestRational, TestComplex, TestModular, TestExpression, TestPolynomial, Numeral.TestNumeral1,
                       Expression.TestEval,
                       Expression.TestDerivative,
                       Expression.TestInverse,
                       Lambda, TestLambda,
                       Lambda2, TestLambda2,
                       Lambda3, TestLambda3
  hs-source-dirs:      src, test
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
