name:                algebra
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/algebra#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable algebra
  other-modules:       Domains.Additive,
                       Domains.Negatable,
                       Domains.Subtractive,
                       Domains.Multiplicative,
                       Domains.Reciprocative,
                       Domains.Ring,
                       Domains.Field,
                       Domains.Euclidean,
                       Domains.Exponentiative,
                       Domains.Trigonometric,
                       Domains.Applicable,
                       Domains.Composite,
                       Data.Rational,
                       Data.Complex,
                       Data.Modular,
                       Data.Expression,
                       Data.Polynomial,
                       Data.Numeral.Numeral1,
                       Hack,
                       Data.Expression.Eval,
                       Data.Expression.Derivative,
                       Data.Expression.Inverse,
                       Factorial,
                       Collins,
                       TestUtil,
                       TestFactorial, TestTypes
                       Data.TestRational,
                       Data.TestComplex,
                       Data.TestModular,
                       Data.TestExpression,
                       Data.TestPolynomial,
                       Data.Numeral.TestNumeral1,
                       Data.Expression.TestEval,
                       Data.Expression.TestDerivative,
                       Data.Expression.TestInverse,
                       Lambda.Lambda1,
                       Lambda.Lambda2,
                       Lambda.Lambda3,
                       Lambda.TestLambda1,
                       Lambda.TestLambda2,
                       Lambda.TestLambda3
  hs-source-dirs:      src, test
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
